
@startuml
class UserDao <<root>>
class CreateUserRequest <<entry point 1>>
class CreateUserResult
class CreateUserActivity
class UserGeneratorService <<service>>
class DateCalculator <<service>>
class ModelConverter <<service>>


class GetZodiacRequest <<entry point 2>>
class GetZodiacResult
class GetZodiacActivity

User --> ModelConverter
CreateUserActivity --* UserDao
GetZodiacActivity --* UserDao
GetZodiacResult --* UserGeneratorService
CreateUserResult --* UserGeneratorService
GetZodiacRequest --* DateCalculator
CreateUserRequest --* User


@enduml